# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.728 2008-08-01 06:53:12 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.1 (2008/??/??)
 - (2008/08/01) Fixed bug# 3142 - The Ticket-ACL module
    CloseParentAfterClosedChilds produces errors.
 - (2008/07/31) Fixed bug# 3141 - The TicketSearch() function produces error on
    a DB2 database, if the argument TicketCreateTimeOlderDate is given.
 - (2008/07/31) Added function LinkCleanup() to delete forgotten temporary
    links that are older than one day. The function is called only when deleting
    a link.
 - (2008/07/30) Updated CPAN module CGI to version 3.39.
 - (2008/07/30) Updated CPAN module MailTools to version 2.04.
 - (2008/07/25) Fixed bug# 2300 - Not all Notification Tags are working in
    Notifications.
 - (2008/07/21) Fixed bug# 3117 - Auto increment of "id" in article_search
    table is not needed.
 - (2008/07/21) Fixed bug# 3104 - If new config can't get created by
    scripts/DBUpdate-to-2.3.pl, the script need to stop.

2.3.0 rc1 (2008/07/21)
 - (2008/07/20) Update persian translation, thanks to Amir Shams Parsa and
    Hooman Mesgary!
 - (2008/07/20) Fixed bug# 2712 - Email in POP3 or IMAP box gets deleted/lost
    also if it got not processed.
 - (2008/07/20) Added Ingres database files for Ingres 2006 R3 experimental
    support.
 - (2008/07/20) Fixed bug# 3102 - (Optional) group-Permissions for
    Frontend::Agent::Ticket::MenuModule(Pre).
 - (2008/07/19) Fixed bug# 3098 - Ticket number search in the new link mask does
    not work correctly.
 - (2008/07/19) Fixed bug# 3093 - Foreign Key drop does not work.
 - (2008/07/19) Fixed bug# 2826 - Impossible to use DEFAULT values in SOPM
    files.